--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,79 +1,87 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap');
 
 * {
-    font-family: 'Quicksand', sans-serif;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-    color: black;
+  font-family: 'Quicksand', sans-serif;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
+  color: white;
 
 }
 
 body {
-    background-color: rgb(72, 75, 75);
+  background-color: #161B21;
 }
 
 .container {
-    text-align: center;
-    max-width: 800px;
-    height: 300px;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 100px;
-    border-radius: 8px;
-}
-
-.title {
-    margin: 0 auto;
-    font-size: 50px;
-
+  text-align: center;
+  max-width: 800px;
+  height: 600px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 50px;
+  border-radius: 8px;
+  background-color: #0D1017;
 }
 
 .clock {
-    font-size: 3.6em;
+  margin: 0 auto;
+  font-size: 3.6em;
+}
+
+img {
+  margin-top: 30px;
+  width: 85px;
 }
 
 .click {
-    display: inline;
-    width: 100%;
-    max-width: 230px;
-    height: 80px;
-    margin: 10px;
-    border-radius: 7px;
-    font-size: 29px;
-    padding: auto;
+  display: inline;
+  width: 100%;
+  max-width: 230px;
+  height: 80px;
+  margin: 10px;
+  border-radius: 7px;
+  font-size: 29px;
+  padding: auto;
+}
+
+.started {
+  filter: saturate(0);
+  opacity: 0.5;
 }
 
 .iniciar {
-    background-color: green;
+  background-color: #2A5B38;
 }
 
 .pausar {
-    background-color: yellow;
+  background-color: #FECC01;
 }
 
 .zerar {
-    background-color: red;
+  background-color: #ED3F49;
 }
 
 .paused {
-    animation: pause .9s infinite ease-in-out;
+  animation: pause .9s infinite ease-in-out;
 }
 
 @keyframes pause {
-    from {
-        color: red;
-    }
+  from {
+    color: red;
+  }
 
-    to {
-        color: black
-    }
+  to {
+    color: black
+  }
 }
-.me{
-    position: absolute;
-    bottom: 10px;
-    outline: black;
+
+.me {
+  position: absolute;
+  bottom: 10px;
+  outline: black;
 }
-.me:hover{
-    outline: black;
+
+.me:hover {
+  outline: black;
 }
